--- a/Lot Sizing.tex
+++ b/Lot Sizing.tex
@@ -63,7 +63,7 @@
 \begin{document}
 \section*{The Capacitated Lot Sizing Model}
 \subsection*{Sets}
-- $T$ = the planning horizon; (index $t\in \left\lbrace 0...n\right\rbrace $)
+- $T$ = the planning horizon; (index $t=0,1,...,n$)
 \subsection*{Parameters}
 - $d_t$ = the demand forecast at time $t$;\\
 
